# pycites

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
pycites/: __init__.py  cites_download.ipynb  cites_download.py  cli.py  download.ipynb  download.py
tests/: test_pycites.py
